--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*- 1 - BASE --- */
 
 /* Helper Classes */
-
+/* Lines 5 - 468 are styling INDEX.HTML */
 .clearfix:after {
 	content: "";
 	display: table;
@@ -468,3 +468,4 @@ h2 + .profile-picture {
 }
 
 /*closes STATE*/
+ /* lines 471 to 650 styling ABOUT.HTML */
